Fix issue with painting behind menu button

--- a/style/master.css
+++ b/style/master.css
@@ -364,6 +364,10 @@ ul {
     display: none;
 }
 
+.painting #menu {
+    pointer-events: none;
+}
+
 @media all and (max-width: 640px) {
 
     #menu {
